--- a/ins-fraud-check/application-api-java/build.gradle
+++ b/ins-fraud-check/application-api-java/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'io.grpc:grpc-netty-shaded:1.47.0'
     implementation 'com.google.code.gson:gson:2.9.0'
 	implementation 'com.owlike:genson:1.5'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
